--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,9 +23,9 @@ build:
 
 requirements:
   host:
-    - vs2015_runtime  # [win]
+    - vc =14  # [win]
   run:
-    - vs2015_runtime  # [win]
+    - vc =14  # [win]
 
 test:
   commands:
