--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}  # [unix]
-    - {{ compiler('cxx') }}  # [unix]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
 
 test:
   commands:
@@ -34,6 +34,8 @@ test:
     - if not exist "%LIBRARY_BIN%\\firefox.exe" exit 1  # [win]
     - "%LIBRARY_BIN%\\firefox.exe --version"  # [win]
     - $PREFIX/bin/firefox --version  # [osx]
+  downstreams:
+    - geckodriver
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
