--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,8 +18,6 @@ source:
 
 build:
   number: 1
-  skip: true  # [win and vc!=14]
-  msvc_compiler: 14.0  # [win]
   binary_relocation:
     - bin/firefox
 
@@ -29,12 +27,8 @@ requirements:
     - {{ compiler('cxx') }}
 
 test:
-  commands:
-    - test -f $PREFIX/bin/firefox  # [not win]
-    - if not exist "%LIBRARY_BIN%\\firefox.exe" exit 1  # [win]
-    - "%LIBRARY_BIN%\\firefox.exe --version"  # [win]
-    - $PREFIX/bin/firefox --version  # [osx]
-  downstreams:
+  requires:
+    - selenium
     - geckodriver
 
 about:
