don't vend vs2015_runtime, add smoke test with selenium (osx/win) (#1)
* try adding vs2015_runtime to avoid/highlight clobber errors

* attempt testing osx/win executable

* try different jinja approach

* yet more linting

* MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.6, and conda-forge-pinning 2019.09.08

* use vc

* try with msvc_compiler for vc, et al

* try with geckodriver downstream

* remove crufty old msvc syntax

* move existence/version test into python, use selenium to check canary page

* can't even initialize driver on linux

* MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.8, and conda-forge-pinning 2019.09.27

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,19 @@ source:
   sha256: 090a84963ff15a8881a5f064c530c6e17a559968867ed4fdc3ac1f6d91047bc9  # [win]
 
 build:
-  number: 0
+  number: 1
   binary_relocation:
     - bin/firefox
 
+requirements:
+  build:
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+
 test:
-  commands:
-    - test -f $PREFIX/bin/firefox  # [not win]
-    - if not exist %LIBRARY_BIN%\\firefox.exe exit 1  # [win]
+  requires:
+    - selenium
+    - geckodriver
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
