--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "70.0.1" %}
+{% set version = "68.4.1esr" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: bc1ef29799f15d1fe709a430203d16c12d5ae0899f1c01ba4461062392a2e77e  # [linux64]
+  sha256: 538356112b407925959aeaf00bb3897922b7e49e4354b67b0c44733d198a2815  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 91a1e443f7aa2328386168df98f3c8fc6f57f70d223ca39ecdeeccf6ea9ddfd8  # [osx]
+  sha256: f6438f128fb5b85e3b91d77103327bf8c941df45abe5bc602950335699f7eb44  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: e5b204a843ed0fde0700ba425608c79104e8b62d3b4d1ecd3841e9a2a88a2a1e  # [win]
+  sha256: b3c5f75e7a058e458ee078575aed7c377fc80d33981bebc9c16b91c89020ce41  # [win]
 
 build:
   number: 0
