--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "68.4.1esr" %}
+{% set version = "72.0.2" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 538356112b407925959aeaf00bb3897922b7e49e4354b67b0c44733d198a2815  # [linux64]
+  sha256: 9bedc544dd8ef5433ee14e38777b5807b07cfa4e886c45ef2c246be6492eaf34  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: f6438f128fb5b85e3b91d77103327bf8c941df45abe5bc602950335699f7eb44  # [osx]
+  sha256: 71314eb7e6aa2d3d5996b82ee7c31b2445339ebcb7e5c9eb572c7ec840a5a72e  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: b3c5f75e7a058e458ee078575aed7c377fc80d33981bebc9c16b91c89020ce41  # [win]
+  sha256: 7ba7bacfbc057366fb4be5727cdde698da506b571fa724093d3024239ca0b363  # [win]
 
 build:
   number: 0
