--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "77.0.1" %}
+{% set version = "78.0esr" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 03859fd56f79cb520e30bae2433b6f61f806c8f95e7576092894eb1d644e6ff1  # [linux64]
+  sha256: 7244b73cb383da695b2e3d6ff79cdabd4e58da16508652fadd742959e0250204  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 820a0bd5d0fcf07aacf3e67ea300abc4fd0cad4a173284ff80dca23d7678a082  # [osx]
+  sha256: 6f764eacdcd459b20e59990e28d05745379702017049269f1e2043a46e183b0e  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 14ed31f7981bf9a5855812998da286cca34416283315ee4234f9f6b00f38856a  # [win]
+  sha256: a725b4b22f5ed965f01f5de96d637d27cf3898e191a1d8729b0243ee55c01230  # [win]
 
 build:
   number: 0
