--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "78.0esr" %}
+{% set version = "79.0" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 7244b73cb383da695b2e3d6ff79cdabd4e58da16508652fadd742959e0250204  # [linux64]
+  sha256: d57ce2ec9d39d4f0e1100a2faf7cfdc827eeb45db672511d5a6aea7229430f85  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 6f764eacdcd459b20e59990e28d05745379702017049269f1e2043a46e183b0e  # [osx]
+  sha256: a19d6c1d496215b03b9acb99f29fc7a258265095df69a2948e1782f3eaa3b855  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: a725b4b22f5ed965f01f5de96d637d27cf3898e191a1d8729b0243ee55c01230  # [win]
+  sha256: 732cdb321f7496c712d70b137b54073192e325ce382c46fe3dd13c1ec82034f3  # [win]
 
 build:
   number: 0
