--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -7,3 +7,7 @@ appveyor:
 provider:
   win: azure
 conda_forge_output_validation: true
+cuda_compiler_version:                    # [linux64]
+  - None                                  # [linux64]
+docker_image:                             # [linux64]
+  - condaforge/linux-anvil-cos7-x86_64    # [linux64]
