--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "68.9.0esr" %}
+{% set version = "68.11.0esr" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 6f15dc7b7de081a4f11ffa24d6ad6cd1877131941ff762d14cb3b0faf4291867  # [linux64]
+  sha256: 30139aebfdde99e08e0fd524211f3f4986d1415471824cb68d7f3bfc6b5be7c7  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: f9e74388a9368d39e61378397ba48f5761857b8b24a0d2786f51ab5400a6b04e  # [osx]
+  sha256: 63eda6ee54bb2d5896a92bfd08e2c13bdd790505406ddec6bcb10f0c96dfb8fe  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 2352015351bdf3f3d0787e0b7f1f07c57e23d60663eeb8fe79a71ca0249cd7b7  # [win]
+  sha256: 0502dc761f103cabb24e0a78ed4a24746331c3fb7c950321aff38fa9d9ad4c3f  # [win]
 
 build:
   number: 0
@@ -25,11 +25,22 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - sysroot_linux-64 2.17  # [linux64]
 
 test:
   requires:
     - selenium
     - geckodriver
+    - pytest-azurepipelines
+    - python >=3.6
+  commands:
+    - copy {{ RECIPE_DIR }}\test_selenium.py .  # [win]
+    - copy {{ RECIPE_DIR }}\setup.cfg .  # [win]
+    - cp {{ RECIPE_DIR }}/test_selenium.py {{ RECIPE_DIR }}/setup.cfg .  # [not win]
+    # TODO: may be needed in the future
+    # https://firefox-source-docs.mozilla.org/testing/geckodriver/Notarization.html
+    # - set -m && % xattr -r -d com.apple.quarantine $PREFIX/bin/geckodriver  # [osx]
+    - python -m pytest
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
