--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ source:
   sha256: 8765dfa132caf00a4ba6a71b7697d1d278ee9f6ae60a215be2f47dc081617064  # [win]
 
 build:
-  number: 0
+  number: 1
   binary_relocation:
     - bin/firefox
 
@@ -25,11 +25,23 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - sysroot_linux-64 2.17  # [linux64]
 
 test:
   requires:
     - selenium
     - geckodriver
+    - pytest-azurepipelines
+    - python >=3.6
+  commands:
+    - copy {{ RECIPE_DIR }}\test_selenium.py .  # [win]
+    - copy {{ RECIPE_DIR }}\setup.cfg .  # [win]
+    - cp {{ RECIPE_DIR }}/test_selenium.py {{ RECIPE_DIR }}/setup.cfg .  # [not win]
+    # TODO: may be needed in the future
+    # https://firefox-source-docs.mozilla.org/testing/geckodriver/Notarization.html
+    # - set -m && % xattr -r -d com.apple.quarantine $PREFIX/bin/geckodriver  # [osx]
+    - python -m pytest
+
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
