--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "95.0" %}
+{% set version = "95.0.2" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 244ec7d444e340116eb4d0f21c513c5cde7f8d5bee75ad9cf492d563a6842554  # [linux64]
+  sha256: f78a41215d168a2a215528a08877b3cc51e0caa3f1a840c27075b3112ef3d7d7  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 19e027e6fdc7ec4929cf08331e585249a7033eade871f33ec30c6724e0fb5c2e  # [osx]
+  sha256: 2fa04f472ba71954a1ba7468a79ca38fab8635a5a150e3b9ee8fe151236775a4  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: fb547789054ca5061fe4640664259f4e7b68af604c2a31f1e0edd2a265074105  # [win]
+  sha256: 561fcc8ebed5d571dd5760233bb0125cc4e4e747a76a37edb7c9f3f4bfdb93d1  # [win]
 
 build:
   number: 0
@@ -41,7 +41,8 @@ test:
     # https://firefox-source-docs.mozilla.org/testing/geckodriver/Notarization.html
     # - set -m && % xattr -r -d com.apple.quarantine $PREFIX/bin/geckodriver  # [osx]
     - python -m pytest
-
+  downstreams:
+    - geckodriver
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
