--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "91.4.0esr" %}
+{% set version = "91.4.1esr" %}
 
 package:
   name: firefox
@@ -6,15 +6,15 @@ package:
 
 source:
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 88188954b0205b9ac347f349bc0cd0d0f1016be65bf0f33441c7ca55782a50ba  # [linux64]
+  sha256: 314d785e150d1ab7dc2b2a93ee1d98b7edb011b2ac6f4a4798532f9e00649cce  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 50732501e8a02feb51e51542e6c9d62b0411fc9b44aa7d7a6058b61d47a27412  # [osx]
+  sha256: 73c53db6667d34a00865076007a909f6a5c10a8e57ab8e904247d8bc32f62135  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 83f2980807ac3171ebb5ee6f972fd9bb6de74da82b219fa7fdf99b10debe6b40  # [win]
+  sha256: fcf6f52ee99360c54277facd53e49c23f5857a8687aec3c37009c664720f7e40  # [win]
 
 build:
   number: 0
@@ -41,7 +41,8 @@ test:
     # https://firefox-source-docs.mozilla.org/testing/geckodriver/Notarization.html
     # - set -m && % xattr -r -d com.apple.quarantine $PREFIX/bin/geckodriver  # [osx]
     - python -m pytest
-
+  downstreams:
+    - geckodriver
 
 about:
   home: https://www.mozilla.org/en-US/firefox/releases
