try alsa-lib in host/run

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,10 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - sysroot_linux-64 2.17  # [linux64]
+  host:
+    - alsa-lib  # [linux64]
+  run:
+    - alsa-lib  # [linux64]
 
 test:
   requires:
