--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ cdt('alsa-lib-devel') }}  # [linux64]
     - sysroot_linux-64 2.17  # [linux64]
   host:
     - alsa-lib  # [linux64]
