--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "97.0" %}
+{% set version = "97.0.1" %}
 
 package:
   name: firefox
@@ -7,15 +7,15 @@ package:
 source:
   folder: firefox  # [linux64]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 3d0f74790fe6ff5e38324222ab0c47e10edb31970ed67c6dd7a1c84e7017d1a5  # [linux64]
+  sha256: a63d28ae61926c0d7447f57d4e6fb514401d560abb50ce787bb6bd0e9b7b820f  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: bd210b343639872bd5f571757fab9fae4bb960418797e770c1d19238e43f4547  # [osx]
+  sha256: ddeab0e979216e7f3c257ffbfa381cbe664421cb5b7d806572fc06e41afe960b  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: f9e20a8e0f3396b5fe7b0074456366305f7b76182aa005d2ab528ae48caf2970  # [win]
+  sha256: a75c7f841ca1d1d3662e9fb8f5781447cef5418b4be31f0b51a6bfbb165b41b1  # [win]
 
 build:
   number: 0
@@ -28,10 +28,6 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ cdt('alsa-lib-devel') }}  # [linux64]
     - sysroot_linux-64 2.17  # [linux64]
-  host:
-    - alsa-lib  # [linux64]
-  run:
-    - alsa-lib  # [linux64]
 
 test:
   requires:
@@ -39,6 +35,7 @@ test:
     - pytest
     - python >=3.6
     - selenium >=4
+    - pulseaudio
   commands:
     - copy {{ RECIPE_DIR }}\test_selenium.py .  # [win]
     - copy {{ RECIPE_DIR }}\setup.cfg .  # [win]
