--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "103.0" %}
+{% set version = "102.0.1esr" %}
 
 package:
   name: firefox
@@ -7,15 +7,15 @@ package:
 source:
   folder: firefox  # [linux64]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 1610dd8b3ec45b8ebc7b6255da53166a4319ef63f36e32861f3eb3026e86132f  # [linux64]
+  sha256: da0b8ee2ebb84a3fc9ea3f9840eef2aa6735437a71381fcf87ef629d5ad67523  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: e808ebb1784ec20ebdd891c581fdf25b587b9015224b2afcaee44d4d90ba4473  # [osx]
+  sha256: ee2808777d2990c60d1b84145fd25702da4aeab16d0e4798080a34eb81bae717  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: baba98b7bc1440b7e2550dc7eb6a19d20d23a317ff6761fc52ad34a3a58d6c36  # [win]
+  sha256: bf5a70004646559004de9cbca2f6813657b14429978e450771c17427e6f8806a  # [win]
 
 build:
   number: 0
