--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "116.0" %}
+{% set version = "115.0.3esr" %}
 
 package:
   name: firefox
@@ -7,15 +7,15 @@ package:
 source:
   folder: firefox  # [linux64]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: c689747d1dfa2b562f665ead7a82a5b399eb8f75b21aab11762f1093d90fea6c  # [linux64]
+  sha256: 8ebfd95fea47d6ed7ae25ee5e0baa57d7a3552e9e8b7d693341d23fd764a090b  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: bf721c0b51f68b35990c84f92c616182c3591de0cdd51092b0d98141bc5c57f1  # [osx]
+  sha256: b3154aeef0dae56f10c9a20fa1ae0a666e6581ffb68a58610e51e4e932c63086  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 577587441811f3fc95633c25f21b0209f5256b6ff7cb9934ab3a321e012218f1  # [win]
+  sha256: 43544557f1016f82a878b427cb9693b559291d87d1d63508a6b4e2ac715f067d  # [win]
 
 build:
   number: 0
