--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,10 @@
-cudnn:                                    # [linux64]
-  - undefined                             # [linux64]
-cuda_compiler_version:                    # [linux64]
-  - None                                  # [linux64]
-docker_image:                             # [linux64]
-  - condaforge/linux-anvil-cos7-x86_64    # [linux64]
+c_stdlib_version:                         # [linux64]
+  - "2.17"                                # [linux64]
 cdt_name:                                 # [linux64]
   - cos7                                  # [linux64]
+cuda_compiler_version:                    # [linux64]
+  - None                                  # [linux64]
+cudnn:                                    # [linux64]
+  - undefined                             # [linux64]
+docker_image:                             # [linux64]
+  - condaforge/linux-anvil-cos7-x86_64    # [linux64]
