--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "127.0.2" %}
+{% set version = "128.0esr" %}
 
 package:
   name: firefox
@@ -7,15 +7,15 @@ package:
 source:
   folder: firefox  # [linux64]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 9e200146236e2403d4be088b49a6c8de3294ff1aa000ebf385d42c593207954b  # [linux64]
+  sha256: 4f16334b814d7852a0e52d6f7c4c78623c98c0521bafd7192107a24694e14a3e  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 33fbfae741b32d88619cf35ab90cafb444a0063d996e3022cc97b1c3fa9cac9b  # [osx]
+  sha256: 24e473a5431905d2ad9e2f3f476d0ec88a00dac25257281ccb5fc8a1498876ce  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 3ac2980ea7b9abce96e98fe12fe57c6a968fce3b5a44cbfceff615a2e0966156  # [win]
+  sha256: ece0884c7ec72deb238b07b31f0b3c545624f36d14a45b2e15a796b389a84486  # [win]
 
 build:
   number: 0
