--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "128.0esr" %}
+{% set version = "128.0.2" %}
 
 package:
   name: firefox
@@ -7,15 +7,15 @@ package:
 source:
   folder: firefox  # [linux64]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 4f16334b814d7852a0e52d6f7c4c78623c98c0521bafd7192107a24694e14a3e  # [linux64]
+  sha256: e9347f23378469bcb3c3cd9a46c85c1324d1536b3ffdaa6c2730ea07908a6c46  # [linux64]
 
   fn: firefox.pkg  # [osx]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 24e473a5431905d2ad9e2f3f476d0ec88a00dac25257281ccb5fc8a1498876ce  # [osx]
+  sha256: 2a543dcf826f4e445e600f7acd6cefc1f5fdd5b9536108476710073ec09abe61  # [osx]
 
   fn: firefox.msi  # [win]
   url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: ece0884c7ec72deb238b07b31f0b3c545624f36d14a45b2e15a796b389a84486  # [win]
+  sha256: 542c21af77d69424c37fd4eeba77c242145b4c042cea4167ca78f80cc035e586  # [win]
 
 build:
   number: 0
