--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,17 +5,17 @@ package:
   version: {{ version }}
 
 source:
-  folder: firefox  # [linux64]
-  url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
-  sha256: 63cb097174d429043ad128341358d14cdb5d4c9d05d035d9e3094634ceaf22c2  # [linux64]
+  - folder: firefox  # [linux64]
+    url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/linux-x86_64/en-US/firefox-{{ version }}.tar.bz2  # [linux64]
+    sha256: 63cb097174d429043ad128341358d14cdb5d4c9d05d035d9e3094634ceaf22c2  # [linux64]
 
-  fn: firefox.pkg  # [osx]
-  url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
-  sha256: 903e0a48eaeb08ebbd94afc658db49703fd02f17843852ae5a5ab1303d79a3ad  # [osx]
+  - fn: firefox.pkg  # [osx]
+    url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/mac/en-US/Firefox%20{{ version }}.pkg  # [osx]
+    sha256: 903e0a48eaeb08ebbd94afc658db49703fd02f17843852ae5a5ab1303d79a3ad  # [osx]
 
-  fn: firefox.msi  # [win]
-  url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
-  sha256: 13a8d218218595f815f61bfa1d3adec515530d05dfd3e78c77df3f76fb6beccd  # [win]
+  - fn: firefox.msi  # [win]
+    url: https://ftp.mozilla.org/pub/firefox/releases/{{ version }}/win64/en-US/Firefox%20Setup%20{{ version }}.msi  # [win]
+    sha256: 13a8d218218595f815f61bfa1d3adec515530d05dfd3e78c77df3f76fb6beccd  # [win]
 
 build:
   number: 0
@@ -26,9 +26,9 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
+    - {{ compiler("c") }}
+    - {{ compiler("cxx") }}
     - {{ stdlib("c") }}
-    - {{ compiler('cxx') }}
 
 test:
   requires:
